--- a/tictactoe/nginx.conf
+++ b/tictactoe/nginx.conf
@@ -1,14 +1,14 @@
 server {
-    listen 80;
+    listen 80; # nginx wystawia frontend
 
     location / {
         root   /usr/share/nginx/html; # Domyślna ścieżka do plików frontendowych
-        index  index.html index.htm;
+        index  index.html index.htm; # Pliki, które mają być serwowane jako domyślne dla katalogu
         try_files $uri $uri/ /index.html; # Obsługa aplikacji SPA
     }
 
     location /socket.io/ {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # Przekazuje oryginalny adres IP klienta do serwera backend
         proxy_set_header Host $host;
 
         proxy_pass http://tictactoe-backend:3001;
